<!--聪明阅读(CongMingYueDu) Chinese text reader with tools to learn vocabulary
        Copyright (C) 2020 Rodrigo Konzen Kirch

        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see <https://www.gnu.org/licenses/>.-->
<resources>
    <string name="app_name">聪明阅读</string>
    <string name="splash_loading">Loading…</string>
    <string name="menu_read">Read</string>
    <string name="menu_open">Open</string>
    <string name="menu_import">Import</string>
    <string name="menu_delete">Delete</string>
    <string name="text_empty">Tap on menu -> [Open] and select a text to read!</string>

    <string name="fragment_import_title">Add/Import Text</string>
    <string name="import_success">Text Imported successfully!</string>>
    <string name="hint_title">Title</string>
    <string name="hint_import_fragment_content">Input chineseText here…</string>
    <string name="save">Save</string>
    <string name="menu_vocabulary">Vocabulary</string>
    <string name="add_vocabulary_fragment_header">Add new vocabulary</string>
    <string name="add_vocabulary_success">Word/Phrase added successfully!</string>
    <string name="add_vocabulary_fragment_hint">Input new word or phrase here</string>
    <string name="add_vocabulary_fragment_hint_extra_info">Info about the vocabulary</string>
    <string name="button_add_vocabulary">加生词</string>
    <string name="button_add_word_or_phrase">Add Word or Phrase</string>
    <string name="show_vocabulary_is_empty">Vocabulary list is empty!</string>
    <string name="button_glossary">词汇表</string>
    <string name="button_text">文章</string>
    <string name="example">例子:</string>

    <string name="main_drawer_view_text">Text</string>
    <string name="main_drawer_view_vocabulary">Vocabulary</string>
    <string name="alert_dialog_delete_confirmation">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="font_size">Font size</string>
    <string name="highlight_settings_summary">Choose the highlight color for unknown words</string>
    <string name="star_toggle_button_description">Star toggle button</string>
    <string name="settings">Settings</string>
    <string name="delete_button_description">Delete button</string>
    <string name="button_edit_vocabulary">Button to edit the vocabulary</string>
    <string name="vocabulary_details_page_counter">\u003c  %1$d\u002f%2$d  \u003e</string>
    <string name="vocabulary_simple_list_title">%1$d WORDS</string>
    <string name="get_text_from_clipboard">Get text from clipboard</string>
    <string name="menu_simple_list">Simple List</string>
    <string name="vocabulary_list">VOCABULARY LIST</string>

</resources>
