<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
            android:id="@+id/main_drawer_view_group"
            android:checkableBehavior="single">
        <item
                android:title="@string/main_drawer_view_text">
            <menu>
                <group android:id="@+id/menu_text"
                        android:checkableBehavior="single">

                    <item
                            android:id="@+id/nav_read_text"
                            android:icon="@drawable/ic_read_80"
                            android:title="@string/menu_read"
                            />

                    <item
                            android:id="@+id/nav_open_text"
                            android:icon="@drawable/ic_opened_folder_96"
                            android:title="@string/menu_open" />

                    <item
                            android:id="@+id/nav_import_text"
                            android:icon="@drawable/ic_import_96"
                            android:title="@string/menu_import" />

                    <item
                            android:id="@+id/nav_delete_text"
                            android:icon="@drawable/ic_delete_forever_black_24dp"
                            android:title="@string/menu_delete" />

                </group>
            </menu>
        </item>
        <item android:title="@string/main_drawer_view_vocabulary">
            <menu>
                <group android:id="@+id/menu_vocabulary"
                    android:checkableBehavior="single">
                    <item
                            android:id="@+id/nav_show_vocabulary"
                            android:icon="@drawable/ic_vocabulary_96"
                            android:title="@string/menu_vocabulary"/>

                </group>
            </menu>
        </item>
        <item
                android:id="@+id/nav_settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_24px">

        </item>
    </group>
</menu>