<?xml version="1.0" encoding="utf-8"?>
<!--聪明阅读(CongMingYueDu) Chinese text reader with tools to learn vocabulary
        Copyright (C) 2020 Rodrigo Konzen Kirch

        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see <https://www.gnu.org/licenses/>.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:elevation="4dp">

        <TextView
                android:id="@+id/textViewPageCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
                android:id="@+id/imageButtonDelete"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_small"
                android:contentDescription="@string/delete_button_description"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_normal"
            android:background="@color/colorWhite"
            android:elevation="8dp">

        <ImageButton
                android:id="@+id/imageButtonEdit"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_small"
                android:contentDescription="@string/button_edit_vocabulary"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/imageViewStar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_small"
                android:contentDescription="@string/star_toggle_button_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_starred_false50x50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textViewSimplified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textViewTraditional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewPinyin"
                app:layout_constraintTop_toBottomOf="@+id/textViewSimplified" />

        <TextView
                android:id="@+id/textViewPinyin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                app:layout_constraintStart_toEndOf="@+id/textViewTraditional"
                app:layout_constraintTop_toTopOf="@+id/textViewTraditional"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/textViewTranslation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:padding="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTraditional" />

        <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTranslation" />


        <TextView
                android:id="@+id/textViewLabelExample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:text="@string/example"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />

        <TextView
                android:id="@+id/textViewExample"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:scrollX="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelExample" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>